--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./data/logbook:/app/data/logbook
       - ./data/control:/app/data/control
+      - ./src:/app/src:ro
       - ./ui:/app/ui:ro
     command: ["streamlit", "run", "ui/ui_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
     ports:
