--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ numpy==1.26.4
 pyarrow==17.0.0
 polars==1.7.1
 streamlit==1.38.0
+streamlit-autorefresh==1.0.1
 loguru==0.7.2
+plotly==5.24.1
 
 # Testing
 pytest==8.3.2
