--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ streamlit-autorefresh==1.0.1
 loguru==0.7.2
 plotly==5.24.1
 
+# Optional dependency required for Plotly trendlines (used in UI correlations)
+statsmodels==0.14.4
+
 # Testing
 pytest==8.3.2
 pytest-asyncio==0.23.8
