--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -3,5 +3,12 @@ name = "ml"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "ccxt>=4.5.18",
+    "lightgbm>=4.6.0",
+    "pandas>=2.3.3",
+    "pandas-ta>=0.4.71b0",
+    "pyarrow>=22.0.0",
+    "websockets>=15.0.1",
+]
