--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "pandas>=2.3.3",
     "pandas-ta>=0.4.71b0",
     "pyarrow>=22.0.0",
+    "scikit-learn>=1.7.2",
     "websockets>=15.0.1",
 ]
